style(case): adjust paddings/margins for responsiveness and add gradients to Design Highlights

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -517,7 +517,7 @@
             Design highlights
           </h2>
 
-          <div class="case-highlights__list ">
+          <div class="case-highlights__list add-big-margin-bottom">
 
             <!-- First sub-block -->
             <article class="case-highlights__item  reveal">
@@ -533,7 +533,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow reveal"
                 />
               </div>
-              <div class="twocol twocol--wide twocol twocol--wide-mg40  reveal">
+              <div class="twocol twocol--wide twocol twocol--wide-mg40  reveal add-small-pagging-top">
                 <h3 class="twocol__heading">Homepage</h3>
                 <div class="twocol__main">
                   <p>
@@ -560,7 +560,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--narrow reveal"
                 />
               </div>
-              <div class="twocol twocol--wide twocol--wide-mg40 reveal">
+              <div class="twocol twocol--wide twocol--wide-mg40 reveal add-small-pagging-top">
                 <h3 class="twocol__heading">Intro screen</h3>
                 <div class="twocol__main">
                   <p>
@@ -590,7 +590,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
                 />
               </div>
-              <div class="twocol twocol--wide twocol--wide-mg40">
+              <div class="twocol twocol--wide twocol--wide-mg40 add-small-pagging-top">
                 <h3 class="twocol__heading reveal">How old are you?</h3>
                 <div class="twocol__main">
                   <p>
@@ -606,8 +606,8 @@
             <!-- Fourth sub-block -->
             <article class="case-highlights__item  reveal">
               
-             <!-- 🦊Creating a version for everwell-senior-solution -->
-             <div class="case-highlights__item">
+             <!-- 🦊Creating a version for children hospital -->
+             <div class="case-highlights__item case-highlights__item-no-top-padding case-highlights__item-no-bottom-padding">
 
               <div class="case-highlights__visual">
                 <div class="case-highlights__visual-col case-highlights__visual-col--left">
@@ -642,8 +642,8 @@
                 </div>
               </div>
             </div>
-            <!-- 👍 End creating a version for everwell-senior-solution -->
-              <div class="twocol twocol--wide twocol--wide-mg40 reveal">
+            <!-- 👍 End creating a version forchildren hospital -->
+              <div class="twocol twocol--wide add-small-pagging-top twocol--wide-mg40 reveal case-highlights__item-no-bottom-padding">
                 <h3 class="twocol__heading">Getting results</h3>
                 <div class="twocol__main">
                   <p>
@@ -660,7 +660,7 @@
             </article>
 
             <!-- Fifth sub-block -->
-            <article class="case-highlights__item reveal">
+            <article class="case-highlights__item reveal no-padding-bottom">
               <div class="case-highlights__visual">
                 <img 
                   src="../assets/images/Results - 3 card.png" 
@@ -668,7 +668,7 @@
                   class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large reveal"
                 />
               </div>
-              <div class="twocol twocol--wide reveal">
+              <div class="twocol twocol--wide reveal add-small-pagging-top">
                 <h3 class="twocol__heading">Multiple patients</h3>
                 <div class="twocol__main">
                   <p>
@@ -689,7 +689,7 @@
       <!-- Collaboration and what's next (reusable two-column pattern) -->
       <a id="nav-impact"></a>
       <!-- 🦊 -->
-       <section class="container case-howmightwe reveal">
+       <section class="container case-howmightwe case-howmightwe-no-top-padding reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Project impact</h2>
 
         <!-- Development collaboration -->
@@ -709,7 +709,7 @@
             </div>
           </div>
         </div>
-        <div class="reveal">
+        <div class="reveal add-big-margin-bottom">
           <div class="twocol">
             <h3 class="twocol__heading ">Design for scale and</br>inclusivity</h3>
             <div class="twocol__main">
@@ -723,7 +723,7 @@
       </section>
       <!-- 🦊end -->
        <a id="nav-learnings"></a>
-      <section class="container case-howmightwe reveal">
+      <section class="container case-howmightwe case-howmightwe-no-top-padding reveal">
         <h2 class="case-highlights__title case-highlights__title-no-top-margin">Collaboration and what’s next</h2>
 
         <!-- Development collaboration -->
