chore: fix Prettier issue and update text on Home and About pages

--- a/about/index.html
+++ b/about/index.html
@@ -209,8 +209,8 @@
 
             <p class="about-hero__intro">
               <strong>Product Designer</strong> based near Vancouver, BC, with
-              four years of experience crafting digital products for consumers
-              and B2B.
+              extensive experience crafting digital products for consumers and
+              B2B.
             </p>
           </div>
 
