--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="hero__info reveal">
               <div class="hero__info-item reveal">
                 <span class="hero__icon">💫</span>
-                <span class="hero__info-text">4 years of experience</span>
+                <span class="hero__info-text">open to work</span>
               </div>
               <div class="hero__info-item reveal">
                 <span class="hero__icon">📍</span>
