fix(icons): replace img elements with inline SVGs for color control and consistency fix(case3): adjust paragraph spacing

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -281,7 +281,43 @@
                 <div class="icon-card reveal">
                   <div class="icon-card__header">
                     <span class="icon-box icon-box-green">
-                      <img src="../assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon" aria-hidden="true">
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <!-- outer circle -->
+  <path
+    d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+  <!-- question curve -->
+  <path
+    d="M9.08984 9.00008C9.32495 8.33175 9.789 7.76819 10.3998 7.40921C11.0106 7.05024 11.7287 6.91902 12.427 7.03879C13.1253 7.15857 13.7587 7.52161 14.2149 8.06361C14.6712 8.60561 14.9209 9.2916 14.9198 10.0001C14.9198 12.0001 11.9198 13.0001 11.9198 13.0001"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+  <!-- dot -->
+  <path
+    d="M12 17H12.01"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="2"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
                     </span>
                     <!-- <span class="icon-box">
                       <img src="./assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon">
@@ -432,13 +468,27 @@
                 <div class="insight-card reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
-                      <img
-                        src="../assets/icons/child.svg"
-                        alt=""
-                        class="icon-box__icon"
-                        width="24"
-                        height="24"
-                      />
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M10 16.75C10.5 17.05 11.2 17.25 12 17.25C12.8 17.25 13.5 17.05 14 16.75
+       M15 12.75H15.01
+       M19.38 7.563C20.0811 8.5824 20.5645 9.7354 20.8 10.95C21.1381 11.1138 21.4233 11.3695 21.6229 11.6878C21.8224 12.0062 21.9282 12.3743 21.9282 12.75C21.9282 13.1257 21.8224 13.4938 21.6229 13.8122C21.4233 14.1305 21.1381 14.3862 20.8 14.55C20.3683 16.5635 19.2592 18.368 17.6577 19.6625C16.0562 20.957 14.0592 21.6632 12 21.6632C9.94076 21.6632 7.94379 20.957 6.34231 19.6625C4.74083 18.368 3.63171 16.5635 3.2 14.55C2.86186 14.3862 2.57668 14.1305 2.37714 13.8122C2.17761 13.4938 2.07178 13.1257 2.07178 12.75C2.07178 12.3743 2.17761 12.0062 2.37714 11.6878C2.57668 11.3695 2.86186 11.1138 3.2 10.95C3.61426 8.9205 4.71589 7.09602 6.31902 5.78437C7.92216 4.47271 9.92866 3.75418 12 3.75C14 3.75 15.5 4.85 15.5 6.25C15.5 7.65 14.6 8.75 13.5 8.75C12.7 8.75 12 8.35 12 7.75
+       M9 12.75H9.01"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
                     </div>
                     <h4 class="insight-card__title">Findings from children</h4>
                   </div>
@@ -453,13 +503,32 @@
                 <div class="insight-card reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
-                      <img
-                        src="../assets/icons/user.svg"
-                        alt=""
-                        class="icon-box__icon"
-                        width="24"
-                        height="24"
-                      />
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M19 21.75V19.75C19 18.6891 18.5786 17.6717 17.8284 16.9216C17.0783 16.1714 16.0609 15.75 15 15.75H9C7.93913 15.75 6.92172 16.1714 6.17157 16.9216C5.42143 17.6717 5 18.6891 5 19.75V21.75"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+  <path
+    d="M12 11.75C14.2091 11.75 16 9.95914 16 7.75C16 5.54086 14.2091 3.75 12 3.75C9.79086 3.75 8 5.54086 8 7.75C8 9.95914 9.79086 11.75 12 11.75Z"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
                     </div>
                     <h4 class="insight-card__title">Findings from parents</h4>
                   </div>
@@ -749,13 +818,28 @@
                 <div class="insight-card add-small-margin-bottom reveal">
                   <div class="insight-card__header">
                     <div class="icon-box icon-box-green">
-                      <img
-                        src="../assets/icons/sparkles.svg"
-                        alt=""
-                        class="icon-box__icon"
-                        width="24"
-                        height="24"
-                      />
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
+       M5 3.70312V7.70312
+       M19 17.7031V21.7031
+       M3 5.70312H7
+       M17 19.7031H21"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
                     </div>
                     <h4 class="insight-card__title">Leveraging AI</h4>
                   </div>
