--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -411,7 +411,26 @@
                 <div class="icon-card reveal">
                   <div class="icon-card__header">
                     <div class="icon-box icon-box-green">
-                      <img src="../assets/icons/pencil-line.svg" alt="" class="icon-box__icon" width="24" height="24">
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M12 20.7031H21
+       M16.5 4.20335C16.8978 3.80553 17.4374 3.58203 18 3.58203C18.2786 3.58203 18.5544 3.6369 18.8118 3.74351C19.0692 3.85011 19.303 4.00637 19.5 4.20335C19.697 4.40033 19.8532 4.63419 19.9598 4.89156C20.0665 5.14893 20.1213 5.42478 20.1213 5.70335C20.1213 5.98193 20.0665 6.25778 19.9598 6.51515C19.8532 6.77252 19.697 7.00637 19.5 7.20335L7 19.7034L3 20.7034L4 16.7034L16.5 4.20335Z
+       M15 5.70312L18 8.70312"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
                     </div>
                     <h4 class="icon-card__title">Research approach</h4>
                   </div>
@@ -427,7 +446,27 @@
                 <div class="icon-card reveal">
                   <div class="icon-card__header">
                     <div class="icon-box icon-box-green">
-                      <img src="../assets/icons/sparkles.svg" alt="" class="icon-box__icon" width="24" height="24">
+                             <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
+       M5 3.70312V7.70312
+       M19 17.7031V21.7031
+       M3 5.70312H7
+       M17 19.7031H21"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
                     </div>
                     <h4 class="icon-card__title">AI in our workflow</h4>
                   </div>
@@ -748,13 +787,30 @@
                   <div class="insight-card add-small-margin-top reveal">
                     <div class="insight-card__header">
                       <div class="icon-box icon-box-green">
-                        <img
-                          src="../assets/icons/sparkles.svg"
-                          alt=""
-                          class="icon-box__icon"
-                          width="24"
-                          height="24"
-                        />
+                      <svg
+  class="icon-box__icon"
+  width="24"
+  height="25"
+  viewBox="0 0 24 25"
+  xmlns="http://www.w3.org/2000/svg"
+  aria-hidden="true"
+>
+  <path
+    d="M12 3.70312L10.088 9.51612C9.99015 9.81363 9.82379 10.084 9.60234 10.3055C9.38088 10.5269 9.11051 10.6933 8.813 10.7911L3 12.7031L8.813 14.6151C9.11051 14.713 9.38088 14.8793 9.60234 15.1008C9.82379 15.3222 9.99015 15.5926 10.088 15.8901L12 21.7031L13.912 15.8901C14.0099 15.5926 14.1762 15.3222 14.3977 15.1008C14.6191 14.8793 14.8895 14.713 15.187 14.6151L21 12.7031L15.187 10.7911C14.8895 10.6933 14.6191 10.5269 14.3977 10.3055C14.1762 10.084 14.0099 9.81363 13.912 9.51612L12 3.70312Z
+       M5 3.70312V7.70312
+       M19 17.7031V21.7031
+       M3 5.70312H7
+       M17 19.7031H21"
+    fill="none"
+    stroke="currentColor"
+    stroke-width="1.5"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+  />
+</svg>
+
+
+
                       </div>
                       <h4 class="insight-card__title">Leveraging AI</h4>
                     </div>
@@ -777,8 +833,8 @@
               <div class="case-context__item reveal">
                 <dt class="case-context__term add-small-margin-bottom">Learnings</dt>
                 <dd class="case-context__desc case-context__desc-last">
-                  <p class="reveal"><strong>Designing for older adults requires more than just larger text and higher contrast</strong></br>Through this project, I gained a deeper appreciation for how essential simplicity is in shaping the user experience. Especially for seniors who may feel uncertain using digital tools and hesitant to press a button. Watching users navigate the original product emphasized how important it is for the design to meet the users where they are at.</p>
-                  <p class="reveal"><strong>"Good enough" infrastructure can block great UX</strong></br>Some of our biggest design challenges weren’t visual: they stemmed from inherited systems that made it hard to prioritize or notify users effectively. UX is so much more than just drawing some screens. In this case, it was also about advocating for front- and back-end improvements.</p>
+                  <p class="add-small-margin-bottom reveal"><strong>Designing for older adults requires more than just larger text and higher contrast</strong></br>Through this project, I gained a deeper appreciation for how essential simplicity is in shaping the user experience. Especially for seniors who may feel uncertain using digital tools and hesitant to press a button. Watching users navigate the original product emphasized how important it is for the design to meet the users where they are at.</p>
+                  <p class="add-small-margin-bottom reveal"><strong>"Good enough" infrastructure can block great UX</strong></br>Some of our biggest design challenges weren’t visual: they stemmed from inherited systems that made it hard to prioritize or notify users effectively. UX is so much more than just drawing some screens. In this case, it was also about advocating for front- and back-end improvements.</p>
                   <p class="add-big-margin-bottom reveal"><strong>Working scrappily doesn’t mean working sloppily</strong><br>With limited time and budget, we got creative with how we did research and testing, from community center visits to AI-assisted brainstorming. I learned how to extract learnings even when conditions weren’t ideal. Some of our most meaningful user insights came from the least “formal” research moments.</br></p>
                 </dd>
               </div>
