style: refine visuals across site (footer link underline, lighter email text, image border and background tweaks)

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -421,7 +421,7 @@
                   <img
                     src="../assets/images/3_2.png"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large img-bdr-btm reveal visible" />
               </div>
               <div class="add-big-margin-bottom twocol add-small-pagging-top twocol--wide reveal">
                 <h3 class="twocol__heading">Home page</h3>
@@ -449,7 +449,7 @@
                 <img
                   src="../assets/images/3_3.png"
                   alt="Screenshot of the main feature"
-                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large reveal"
+                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large img-bdr-btm reveal"
                 />
 
                 <!-- Two cards row -->
@@ -495,12 +495,12 @@
                 <img
                   src="../assets/images/Patient_profile.gif"
                   alt="Screenshot of the main feature"
-                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large reveal"
+                  class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large img-bdr-btm reveal"
                 />
 
                 <!-- Two cards row -->
                 <div class="case-highlights__cards-row case-highlights__cards-row-second">
-                  <div class="case-widget-card case-widget-card--no-padding case-widget-card-row case-widget-card-small-2 reveal">
+                  <div class="case-widget-card case-widget-card--no-padding case-widget-card-row case-widget-card-small-2 img-bdr-btm reveal">
                     <img  src="../assets/images/3_4-1.png" alt="Digital Buddies program preview">
                   </div>
                   <div class="case-widget-card case-widget-card-hor case-widget-card--notice reveal">
@@ -536,7 +536,7 @@
                   <img
                     src="../assets/images/Patient_trends.gif"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal img-bdr-btm visible" />
                 </div>
                 <div class="add-big-margin-bottom twocol twocol--wide reveal">
                       <h3 class="twocol__heading">Patient trends</h3>
@@ -554,7 +554,7 @@
                   <img
                     src="../assets/images/3_6.png"
                     alt="an image of the notification card"
-                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large reveal visible" />
+                    class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--900 case-highlights__visual-image--large img-bdr-btm reveal visible" />
                 </div>
                 <div class="add-big-margin-bottom twocol twocol--wide reveal">
                       <h3 class="twocol__heading">Forms and PROMs</h3>
@@ -574,13 +574,13 @@
                   <img
                     src="../assets/images/3_7.png"
                     alt="Image for connected living, and who is jopining it"
-                    class="case-highlights__visual-image case-highlights__visual-image--wide reveal" />
+                    class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal" />
                 </div>
                 <div class="case-highlights__visual-col case-highlights__visual-col--right case-highlights__visual-col--right-390">
                   <img
                     src="../assets/images/3_8.png"
                     alt="Image for connected living, and who is jopining it"
-                    class="case-highlights__visual-image case-highlights__visual-image--wide reveal" />
+                    class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal" />
                   
                 </div>
               </div>
@@ -652,7 +652,7 @@
                     <li>Bring patient feedback into the process even earlier</li>
                   </ul>
 
-                  <p class="add-small-margin-bottom reveal"><strong>Most proud of:</strong></p>
+                  <p class="reveal"><strong>Most proud of:</strong></p>
                   <p class="add-big-margin-bottom reveal">Transforming raw healthcare data into actionable insights for clinicians and patients, and building a platform that can keep evolving to meet new clinical needs.</p>
                 </dd>
               </div>
