feat(about): add photo change on span click

--- a/about/index.html
+++ b/about/index.html
@@ -166,8 +166,9 @@
             />
 
             <p class="about-hero__caption">
-              Fashion is one of my favourite hobbies – click on my photo to see
-              a random look I’ve styled!
+              Fashion is one of my favourite hobbies –
+              <span class="about-fashion-highlight">click on my photo</span> to
+              see a random look I’ve styled!
             </p>
           </div>
         </div>
